[package]
name = "iptv_proxy_rs"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
warp = "0.3.4"
reqwest = {version = "0.11.12", features = ["json"] }
urlencoding = "2.1.2"
m3u8-rs = "5.0.3"
url = "2.3.1"